[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprites/bulletRed1_outline.png" type="Texture" id=1]
[ext_resource path="res://objects/Bullet.gd" type="Script" id=2]
[ext_resource path="res://sprites/smokeWhite1.png" type="Texture" id=3]
[ext_resource path="res://sprites/explosionSmoke3.png" type="Texture" id=4]
[ext_resource path="res://sprites/explosionSmoke1.png" type="Texture" id=5]
[ext_resource path="res://sprites/explosionSmoke5.png" type="Texture" id=6]
[ext_resource path="res://sprites/explosionSmoke4.png" type="Texture" id=7]
[ext_resource path="res://sprites/explosionSmoke2.png" type="Texture" id=8]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.488889, 1 )
colors = PoolColorArray( 0.888672, 0.378095, 0.0867844, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.2 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.05
scale_random = 0.1
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 4.2171
height = 6.12091

[sub_resource type="Animation" id=7]
resource_name = "explode"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteDestruction:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteDestruction:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Bullet" type="Area2D" groups=[
"cannon_bullets",
]]
collision_layer = 8
collision_mask = 6
script = ExtResource( 2 )

[node name="SmokeParticles" type="Particles2D" parent="."]
position = Vector2( -8.2704, 0.113411 )
amount = 15
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 6 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -0.222725, -2.38419e-06 )
rotation = 1.5708
scale = Vector2( 0.420916, 0.743866 )

[node name="SpriteDestruction" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="AnimationDestruction" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 7 )
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
